move to stvle b

--- a/new.html
+++ b/new.html
@@ -1,9 +1,12 @@
 <html>
   <head>
     <title>me </title>
+     <style>
+            h1{color:blue;}
+      </style>
   </head>
 <body>
-<h1 style="color:blue;">wlllwlll!!</h1>
+<h1 ">wlllwlll!!</h1>
 
 <h2>fffff</h2>
 my my
